<resources>
    <string name="app_name">PEP Farms Chemical Calculator</string>
    <string name="acres">Liquid Applied Per Acre</string>
    <string name="tankSize">Tank Size</string>
    <string name="chemicals">Chemicals</string>
    <string name="gPA">Rate</string>
    <string name="gPT">Gallons Per Tank</string>
    <string name="calculate">Calculate</string>
    <string name="buttonAdd">Add Values</string>
    <string name="rateRange">Rate Range</string>
    <string name="chemName">Chemical Name</string>
    <string name="rateLow">Rate Low (ounces/acre)</string>
    <string name="epaNum">EPA Number</string>
    <string name="rateHigh">Rate High (ounces/acre)</string>
    <string name="chemClass">Chem Class</string>
    <string name="rainfast">Rainfast (hours)</string>
    <string name="phi">PHI (days)</string>
    <string name="save">Save</string>
    <string name="addChem">Add/Change Chemical</string>
</resources>
